log

Wed 16 Aug 2023 09:45:10 PM UTC: 
 tests:  0|7
total_score: 0/70
8373ec1
Wed 16 Aug 2023 10:07:07 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:17: error: ‘tamaño’ undeclared (first use in this function)
   14 |   for(int i=0;i<tamaño;i++){
      |                 ^~~~~~
exercises.c:14:17: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:16:19: error: expected ‘;’ before ‘}’ token
   16 |       mayor=arr[i]
      |                   ^
      |                   ;
   17 |     }
      |     ~              
Compilation failed
7393c7b
Wed 16 Aug 2023 10:07:41 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
50c22a6
Wed 16 Aug 2023 10:12:20 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
28c02d2
Wed 16 Aug 2023 11:10:04 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:30:15: error: expected ‘;’ before ‘arr’
   30 |     aux=arr[i]
      |               ^
      |               ;
   31 |     arr[i]=arr[size-i]
      |     ~~~        
exercises.c:28:7: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   28 |   int aux=0;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
52563ca
